--- a/ToDoLists_App.html
+++ b/ToDoLists_App.html
@@ -22,141 +22,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
 
-    <style>
-      body {
-        margin: 0;
-        min-width: 250px;
-      }
-
-      /* Include the padding and border in an element's total width and height */
-      * {
-        box-sizing: border-box;
-      }
-
-      /* Remove margins and padding from the list */
-      ul {
-        margin: 0;
-        padding: 0;
-      }
-
-      /* Style the list items */
-      ul li {
-        cursor: pointer;
-        position: relative;
-        padding: 12px 8px 12px 40px;
-        list-style-type: none;
-        background: #eee;
-        font-size: 18px;
-        transition: 0.2s;
-
-        /* make the list items unselectable */
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-      }
-
-      /* Set all odd list items to a different color (zebra-stripes) */
-      ul li:nth-child(odd) {
-        background: #f9f9f9;
-      }
-
-      /* Darker background-color on hover */
-      ul li:hover {
-        background: #ddd;
-      }
-
-      /* When clicked on, add a background color and strike out text */
-      ul li.checked {
-        background: #888;
-        color: #fff;
-        text-decoration: line-through;
-      }
-
-      /* Add a "checked" mark when clicked on */
-      ul li.checked::before {
-        content: "";
-        position: absolute;
-        border-color: #fff;
-        border-style: solid;
-        border-width: 0 2px 2px 0;
-        top: 10px;
-        left: 16px;
-        transform: rotate(45deg);
-        height: 15px;
-        width: 7px;
-      }
-
-      /* Style the edit button */
-      .edit {
-        position: absolute;
-        right: 50px;
-        top: 0;
-        padding: 12px 16px 12px 16px;
-      }
-
-      .edit:hover {
-        background-color: rgb(111, 54, 244);
-        color: white;
-      }
-
-      /* Style the close button */
-      .close {
-        position: absolute;
-        right: 0;
-        top: 0;
-        padding: 12px 16px 12px 16px;
-      }
-
-      .close:hover {
-        background-color: #f44336;
-        color: white;
-      }
-
-      /* Style the header */
-      .header {
-        background-color: #368ff4;
-        padding: 30px 40px;
-        color: white;
-        text-align: center;
-      }
-
-      /* Clear floats after the header */
-      .header:after {
-        content: "";
-        display: table;
-        clear: both;
-      }
-
-      /* Style the input */
-      input {
-        margin: 0;
-        border: none;
-        border-radius: 0;
-        width: 75%;
-        padding: 10px;
-        float: left;
-        font-size: 16px;
-      }
-
-      /* Style the "Add" button */
-      .addBtn {
-        padding: 10px;
-        width: 25%;
-        background: #d9d9d9;
-        color: #555;
-        float: left;
-        text-align: center;
-        font-size: 16px;
-        cursor: pointer;
-        transition: 0.3s;
-        border-radius: 0;
-      }
-
-      .addBtn:hover {
-        background-color: #bbb;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <!-- header tag - for SEO -->
@@ -182,139 +48,7 @@
     <!-- footer tag - for SEO -->
     <footer></footer>
 
-    <script>
-      // *** 5 *** Reuseable Function for adding delete icons to each list
-      // Create a "Delete" button
-      function addDeleteIcon() {
-        var deleteButton = document.createElement("span");
-        var txt = document.createTextNode("\u00D7");
-        deleteButton.className = "close";
-        deleteButton.appendChild(txt);
-        deleteButton.innerHTML = '<i class="fa fa-trash"></i>'; //adding custom icon as js dom
-        return deleteButton;
-      }
-
-      // *** 7 **** Reuseable Function for adding edit icons to each list
-      // Create an "Edit" button
-      function addEditIcon() {
-        var editButton = document.createElement("SPAN");
-        var editIcon = document.createTextNode("✎");
-        editButton.className = "edit";
-        editButton.appendChild(editIcon);
-        editButton.onclick = function () {
-          editTask(this); // function reusing for editing each list
-        };
-        return editButton;
-      }
-
-      // *** 8 *** Reuseable Function for editing each list
-      // Function to edit a task
-      function editTask(element) {
-        var listItem = element.parentElement;
-        var taskText = listItem.firstChild.nodeValue.trim(); // Get the text content of the task
-
-        // Prompt the user for the updated task text
-        var updatedTask = prompt("Edit task:", taskText);
-
-        // Update the task if the user entered new text
-        if (updatedTask !== null && updatedTask !== "") {
-          listItem.firstChild.nodeValue = updatedTask;
-        }
-      }
-
-      // **** 2 **** Create a "close" button and append it to each list item
-      var myNodelist = document.getElementsByTagName("li");
-      var i;
-      for (i = 0; i < myNodelist.length; i++) {
-        // var span = document.createElement("span");
-        // var txt = document.createTextNode("\u00D7");
-        // span.className = "close";
-        // span.appendChild(txt);
-        // span.innerHTML = '<i class="fa fa-trash"></i>';
-
-        deleteButton = addDeleteIcon(); //Function reusing for adding delete icons to each list
-        editButton = addEditIcon(); //Function reusing for adding edit icons to each list
-
-        myNodelist[i].appendChild(editButton);
-        myNodelist[i].appendChild(deleteButton);
-      }
-
-      // *** 6 *** Reuseable Function for deleting each list
-      function addFunctionToDeleteIcon() {
-        for (i = 0; i < close.length; i++) {
-          close[i].onclick = function () {
-            var div = this.parentElement;
-            div.style.display = "none";
-            return div;
-          };
-        }
-      }
-
-      // **** 3 **** Click on a close button to hide the current list item
-      var close = document.getElementsByClassName("close");
-      // for (i = 0; i < close.length; i++) {
-      //   close[i].onclick = function () {
-      //     var div = this.parentElement;
-      //     div.style.display = "none";
-      //   };
-      // }
-      addFunctionToDeleteIcon(); // Function reusing for deleting each list
-
-      // **** 4 **** Add a "checked" symbol when clicking on a list item
-      var list = document.querySelector("ul");
-      list.addEventListener(
-        "click",
-        function (ev) {
-          if (ev.target.tagName === "LI") {
-            ev.target.classList.toggle("checked");
-          }
-        },
-        false
-      );
-
-      // **** 1 **** Create a new list item when clicking on the "Add" button
-      /*
-        <input type="text" id="myInput" placeholder="Title..." />
-      <span onclick="newElement()" class="addBtn">Add</span>
-      */
-      function newElement() {
-        var li = document.createElement("li");
-        var inputValue = document.getElementById("myInput").value;
-        var text = document.createTextNode(inputValue);
-        li.appendChild(text);
-
-        // ** checking whether is inputValue null **
-        if (inputValue === "") {
-          alert("You must write something!");
-        } else {
-          document.getElementById("myUL").appendChild(li);
-        }
-
-        // ** to clear data from input text box **
-        document.getElementById("myInput").value = "";
-
-        // ** to delete list in each list **
-        // var span = document.createElement("span");
-        // var txt = document.createTextNode("\u00D7");
-        // span.className = "close";
-        // span.innerHTML = '<i class="fa fa-trash"></i>';
-        // span.appendChild(txt);
-
-        deleteButton = addDeleteIcon(); //Function reusing for adding delete icons to each list
-        editButton = addEditIcon(); //Function reusing for adding edit icons to each list
-
-        li.appendChild(editButton);
-        li.appendChild(deleteButton);
-
-        // for (i = 0; i < close.length; i++) {
-        //   close[i].onclick = function () {
-        //     var div = this.parentElement;
-        //     div.style.display = "none";
-        //   };
-        // }
-
-        addFunctionToDeleteIcon(); // Function reusing for deleting each list
-      }
+    <script src="script.js">
     </script>
   </body>
 </html>
