modified typo current release version

--- a/ToDoLists_App.html
+++ b/ToDoLists_App.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Meta Tags for SEO -->
-    <meta name="title" content="Simple ToDoList (FDM-batch2)" />
+    <meta name="title" content="Simple ToDoList(FDM-batch2)" />
     <meta
       name="description"
       content="Manage your tasks efficiently with this simple to-do list."
@@ -28,7 +28,7 @@
     <!-- header tag - for SEO -->
     <header>
       <div id="myDIV" class="header">
-        <h2 style="margin: 5px">My Simple To Do List</h2>
+        <h2 style="margin: 5px">Simple ToDoList App</h2>
         <input type="text" id="myInput" placeholder="Title..." />
         <span onclick="newElement()" class="addBtn">Add</span>
       </div>
@@ -48,7 +48,6 @@
     <!-- footer tag - for SEO -->
     <footer></footer>
 
-    <script src="script.js">
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
